Fixed the off center session form inputs, added corresponding board render for user page

--- a/app/assets/stylesheets/api/login.scss
+++ b/app/assets/stylesheets/api/login.scss
@@ -23,11 +23,14 @@
   padding-top: 20px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
 }
 
 .login-user {
   margin-bottom: 5px;
-
+  width: 228px;
   input {
     padding: 12px 30px 7px 3px;
     font-size: 17px;
@@ -38,7 +41,7 @@
 
 .login-password {
   margin-top: 5px;
-
+  width: 228px;
   input {
     padding: 12px 30px 7px 3px;
     font-size: 17px;
@@ -52,20 +55,6 @@
   padding-bottom: 25px;
   margin-right: 5px;
   font-family: 'Roboto', sans-serif;
-
-  ul:last-of-type::after {
-    content: '';
-  	position: absolute;
-  	bottom: 0;
-  	left: 50%;
-  	width: 0;
-  	height: 0;
-  	border: 19px solid transparent;
-  	border-top-color: #00aabb;
-  	border-bottom: 0;
-  	margin-left: -19px;
-  	margin-bottom: -19px;
-  }
 }
 
 .login-submit {
@@ -73,7 +62,6 @@
     transition: border-radius 0.55s cubic-bezier(0.96, 2, 0.36, 0.25), background-color 0.3s linear;
     margin-top: 10px;
     width: 230px;
-    margin-left: 60px;
     height: 34px;
     font-size: 20px;
     background-color: red;
